feat: extend expense by description field
