# apps/go-api/docs/swagger.json
@@ -778,6 +778,10 @@
                     "type": "integer",
                     "example": 1
                 },
+                "description": {
+                    "type": "string",
+                    "example": "Some text"
+                },
                 "month": {
                     "type": "integer",
                     "example": 7
@@ -871,6 +875,7 @@
                 "amount",
                 "category_id",
                 "created_at",
+                "description",
                 "id",
                 "month",
                 "resident_location_id",
@@ -889,6 +894,10 @@
                 "created_at": {
                     "type": "string",
                     "example": "2026-07-13T12:00:00Z"
+                },
+                "description": {
+                    "type": "string",
+                    "example": "Some text"
                 },
                 "id": {
                     "type": "integer",
@@ -1067,7 +1076,8 @@
                 "id",
                 "postal_code",
                 "street",
-                "updated_at"
+                "updated_at",
+                "user_id"
             ],
             "properties": {
                 "apartment": {
@@ -1105,6 +1115,10 @@
                 "updated_at": {
                     "type": "string",
                     "example": "2026-07-09 08:34:05.796617"
+                },
+                "user_id": {
+                    "type": "string",
+                    "example": "00000000-0000-0000-0000-000000000001"
                 }
             }
         },
@@ -1142,6 +1156,10 @@
                 "category_id": {
                     "type": "integer",
                     "example": 1
+                },
+                "description": {
+                    "type": "string",
+                    "example": "Some text"
                 },
                 "month": {
                     "type": "integer",
